<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_tracking"
            android:checked="true"
            android:icon="@drawable/icon_tracking"
            android:title="@string/navigation_tracking" />
        <item
            android:id="@+id/navigation_share"
            android:icon="@drawable/icon_share"
            android:title="@string/navigation_share" />
        <item
            android:id="@+id/navigation_create"
            android:icon="@drawable/icon_add"
            android:title="@string/navigation_create" />
    </group>

    <group
        android:id="@+id/group_secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/navigation_settings" />
    </group>
</menu>