<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/edit_tag_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentScrim="@color/primary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="@color/primary_dark">

                <!-- Image and touch effect-->
                <FrameLayout
                    android:id="@+id/edit_tag_image_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:fitsSystemWindows="true">

                    <!-- Tag picture-->
                    <ImageView
                        android:id="@+id/edit_tag_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_no_image"
                        app:layout_collapseMode="parallax"
                        tools:ignore="ContentDescription" />

                    <!-- Picture's touch effect-->
                    <FrameLayout
                        android:id="@+id/edit_tag_image_view_overlay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector_touch_effect"
                        android:clickable="true" />
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/edit_tag_tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_tag_camera_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/icon_camera"
            app:backgroundTint="@color/accent"
            app:layout_anchor="@id/edit_tag_app_bar_layout"
            app:layout_anchorGravity="bottom|end" />

        <!-- Main content-->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Cards LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <!-- Details card-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <!-- Card content-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="24dp">

                        <TextView
                            style="?android:attr/listSeparatorTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:text="@string/label_details"
                            android:textColor="@color/primary"
                            android:textSize="24sp" />

                        <!-- Difficulty-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/edit_tag_difficulty_label_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_difficulty"
                                android:textColor="@color/primary_text"
                                android:textSize="20sp" />

                            <Spinner
                                android:id="@+id/edit_tag_spinner"
                                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:popupBackground="@android:color/white" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/edit_tag_tag_it_button"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_tag_it"
                            android:textColor="@color/accent"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <!-- Circular reveal content-->
    <FrameLayout
        android:id="@+id/edit_tag_reveal_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent"
        android:fitsSystemWindows="true"
        android:visibility="invisible" />
</android.support.design.widget.CoordinatorLayout>

